# set-anubis

./: LICENSE  README.md  check_cavern_positions.py  check_decay_length.py  check_geometry.py  install.sh  playbook.yml  requirements.txt  run.py
.github/workflows/: tests.yml
Assets/Test/MadGraphOutput/Events/: scan_run_0[1-4].txt
Assets/Test/MadGraphOutput/Events/run_01/: run_01_tag_1_banner.txt  unweighted_events.lhe
Assets/Test/MadGraphOutput/Events/run_01_decayed_1/: run_01_decayed_1_tag_1_banner.txt
Assets/Test/MadGraphOutput/Events/run_02/: run_02_tag_1_banner.txt  unweighted_events.lhe
Assets/Test/MadGraphOutput/Events/run_02_decayed_1/: run_02_decayed_1_tag_1_banner.txt
Assets/Test/MadGraphOutput/Events/run_03/: run_03_tag_1_banner.txt  unweighted_events.lhe
Assets/Test/MadGraphOutput/Events/run_03_decayed_1/: run_03_decayed_1_tag_1_banner.txt  run_shower.sh
Assets/Test/MadGraphOutput/Events/run_04/: run_04_tag_1_banner.txt  unweighted_events.lhe
Assets/Test/MadGraphOutput/Events/run_04_decayed_1/: run_04_decayed_1_tag_1_banner.txt  tag_1_pythia8.cmd
External_Integration/Marty/: CMakeLists.txt  install.sh
setanubis/: MadGraph_Interface.py  Selection.py  Width_Calculator.py  alp_calculate_visible_br.py  df_creation.py  df_to_sampledfs.py  extract_selection_data.py  hnl_plot_surviving_llps_heatmap.py  main_hnl_madgraph_interface.py  plot_alp_decay_distance_by_channel.py  plot_alp_decay_distance_from_ip.py  plot_alp_decay_perpdistance.py  plot_alp_decay_positions_on_geometry.py  plot_alp_partial_widths.py  plot_cutflow.py  plot_decay_positions.py  plot_signal_events_heatmap.py  plot_surviving_llps_heatmap.py  simple_alp_br.py
setanubis/ALP_W+_Analysis/: alp_W+_extract_selection_data.py  alp_W+_plot_signal_events_heatmap.py  alp_W+_plot_surviving_llps_heatmap.py
setanubis/ALP_W-_Analysis/: alp_W-_extract_selection_data.py  alp_W-_plot_signal_events_heatmap.py  alp_W-_plot_surviving_llps_heatmap.py
setanubis/ALP_Z_Analysis/: plot_signal_events_heatmap.py  plot_surviving_llps_heatmap.py
setanubis/HNL_Analysis/: hnl_calculate_visible_br.py  hnl_extract_selection_data.py  hnl_plot_signal_events_heatmap.py
setanubis/SetAnubis/core/BranchingRatio/domain/: MartyManager.py
setanubis/SetAnubis/core/DataBase/domain/: UFOTree.py
setanubis/SetAnubis/core/Geometry/domain/: _plotGeometry.py  defineGeometry.py
setanubis/SetAnubis/core/MadGraph/adapters/input/: MadGraphHepmcAnalyzer.py
setanubis/SetAnubis/core/Pythia/adapters/input/: CMNDScanManager.py  PythiaCMNDInterface.py  PythiaRunInterface.py
setanubis/SetAnubis/core/Pythia/app/: pythia_b_run.py  pythia_b_run_muon.py  pythia_c_run muon.py  pythia_c_run.py  pythia_cmnd_test.py  pythia_full_run.py  pythia_run_test.py  pythia_scan_cmnd_test.py  tau0_test.py
setanubis/SetAnubis/core/Pythia/app/CLI/: run_simulation.py
setanubis/SetAnubis/core/Pythia/domain/: CMNDBaseGeneration.py  CMNDFormat.py  CMNDSection.py  CMNDSectionType.py  HardProductionSelection.py  NewParticleConfig.py  PythiaCMNDGenerator.py  PythiaConfig.py  PythiaConfigFactory.py  PythiaRunManager.py  PythiaToMadgraphOutput.py  SpecialCases.py
setanubis/SetAnubis/core/Pythia/infrastructure/: enums.py
setanubis/SetAnubis/core/Selection/adapters/input/: SelectionGeometryAdapter.py
setanubis/SetAnubis/core/Selection/adapters/output/: WriteLoadSelectionDict.py
setanubis/SetAnubis/core/Selection/app/: test_sample_df.py  test_selection_engine.py
setanubis/SetAnubis/core/Selection/domain/: HepMCFrameBuilder.py  JetBuilder.py  LLPAnalyzer.py  ReweightTransformer.py  SelectionEngine.py  isolation.py
setanubis/SetAnubis/examples/MadGraph/: example_hepmc_plots.py  example_madgraph_interface.py
setanubis/SetAnubis/examples/Pythia/: example_pythia_cmnd.py
setanubis/SetAnubis/examples/Selection/: example_df_creation.py  example_df_to_sampledfs.py  example_jets_and_pT_deltaR_cuts.py
setanubis/tests/integration/branchingratio/: test_marty_manager_integration.py
setanubis/tests/integration/database/: test_ufo_manager_integration.py
setanubis/tests/integration/modelcore/: test_qcd_runner_integration.py
setanubis/tests/unit/branchingratio/: test_marty_manager_unit.py
